[package]
name = "rustestes_lib"
# Always have to change the version to update the package we are creating
version = "0.3.0"
edition = "2021"
description = "Test Rust Lib with WASM"

# cargo wapm to release the next version
[lib]
# Need to specify CDYLIB in order to get a .wasm file
crate-type = ["cdylib", "rlib"]

[package.metadata.wapm]
# Your WAPM username
namespace = "udyweber"
abi = "none"
bindings = { wai-version = "0.1.0", exports = "rustestest_lib.wai"}

[dependencies]
wai-bindgen-rust = "0.2.3"
